@startuml

title __APP's Class Diagram__\n

  namespace game.config {
    enum CanvasConfig {
    }
  }
  

  namespace game.controller {
    class game.controller.GameController {
    }
  }
  

  namespace game.model {
    class game.model.GameRound {
    }
  }
  

  namespace game.model {
    class game.model.Player {
    }
  }
  

  namespace transport {
    class transport.GameServer {
    }
  }
  

  namespace transport {
    namespace config {
      class transport.config.GameServerInitializer {
      }
    }
  }
  

  namespace transport {
    namespace config {
      class transport.config.HttpRequestHandler {
      }
    }
  }
  

  namespace transport {
    namespace config {
      class transport.config.TextWebSocketFrameHandler {
      }
    }
  }
  

  namespace transport {
    namespace handler {
      class transport.handler.JSONInboundHandler {
      }
    }
  }
  

  namespace transport {
    namespace handler {
      class transport.handler.JSONOutboundHandler {
      }
    }
  }
  

  game.controller.GameController o-- transport.handler.JSONOutboundHandler : out
  game.controller.GameController o-- game.model.GameRound : round
  transport.config.GameServerInitializer -up-|> io.netty.channel.ChannelInitializer
  transport.config.HttpRequestHandler -up-|> io.netty.channel.SimpleChannelInboundHandler
  transport.config.TextWebSocketFrameHandler -up-|> io.netty.channel.SimpleChannelInboundHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
